# stone-agent-core

./: .env.example  README.md  environment.yml  pyproject.toml  test_config_module.py
examples/: README.md  config_based_module.py  framework_with_llm.py  simple_llm.py  simple_pipeline.py  tool_llm.py
src/stone_agent_core/core/: config.py  framework.py  module.py  state.py
src/stone_agent_core/llm/: __init__.py  llm_anthropic.py  llm_base.py  llm_factory.py  llm_litellm.py  llm_openai.py
src/stone_agent_core/utils/: dependency_resolver.py  validation.py  visualization.py
tests/: README.md  test_core_framework.py  test_examples.py  test_llm_components.py
